# chat-customer

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  setup.bat  start.bat  stop_backend.py
app/: __init__.py  main.py
app/agents/: __init__.py  aftersales_agent.py  base.py  fallback.py  graph.py  main_agent.py  orchestrator.py  order_agent.py  presales_agent.py  rag_agent.py  reviewer_agent.py  router.py  rule_router.py  safety_agent.py  semantic_router.py  state.py
app/api/: __init__.py  deps.py
app/feedback/: __init__.py  example_store.py  optimizer.py  service.py
app/llm/: __init__.py  circuit_breaker.py  client.py  embedding.py  formatter.py  reranker.py  retry.py
app/logger/: __init__.py  handlers.py  setup.py  tracer.py
app/memory/: __init__.py  manager.py  window.py
app/prompts/: __init__.py  loader.py  service.py
app/scripts/: rebuild_qdrant.py
app/security/: __init__.py  api_key.py  auth.py  rate_limit.py  sensitive.py
app/services/: __init__.py  chat_service.py  knowledge_service.py  ops_service.py  stats_service.py
app/storage/: __init__.py
app/tools/: __init__.py  order_tools.py  product_tools.py  rag_tools.py  registry.py  safety_tools.py  user_tools.py
config/: __init__.py  settings.py
config/prompts/: aftersales_agent.md  intent_prototypes.json  main_agent.md  order_agent.md  presales_agent.md  (+3 more)
frontend/: index.html  package-lock.json  package.json
models/: .gitignore  README.md
scripts/: check_db.py  init_db.py  init_qdrant.py  seed_data.py  seed_prompts.py
(+133 files in other folders)
